[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["tradalhariri <trad.alhariri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.0"
pandas = "1.2.1"
jupyterlab = "^3.2.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
